--- a/app/components/lookbook/params/editor/component.html.erb
+++ b/app/components/lookbook/params/editor/component.html.erb
@@ -1,3 +1,16 @@
-<%= render_component_tag do %>
-  <%= safe_join(fields.compact) %>
+<%= render_component_tag class: "p-4 overflow-hidden" do %>
+  <div class="bg-white border border-lookbook-divider rounded-md overflow-x-auto">
+    <table class="border-collapse w-full" :class="narrow && 'linear'">
+      <thead>
+        <tr>
+          <th class="param-label">Param</th>
+          <th class="param-description">Description</th>
+          <th class="param-input">Input</th>
+        </tr>
+      </thead>
+      <tbody>
+        <%= safe_join(fields.compact) %>
+      </tbody>
+    </table>
+  </div>
 <% end %>
