--- a/app/views/lookbook/previews/panels/_params.html.erb
+++ b/app/views/lookbook/previews/panels/_params.html.erb
@@ -5,7 +5,7 @@
     <% end %>
   </div>
 <% else %>
-  <div class="py-3 h-full">
+  <div class="h-full overflow-x-hidden">
     <%= lookbook_render "params/editor", inputs: Lookbook::Params.inputs do |editor| %>
       <% preview.params.each do |param| %>
         <% editor.field **param, value: params[param[:name]] %>
