--- a/app/views/lookbook/previews/inputs/_range.html.erb
+++ b/app/views/lookbook/previews/inputs/_range.html.erb
@@ -3,9 +3,10 @@
     <%= input_options[:min] %>
   </div>
   <div class="w-full px-2">
-    <%= text_field_tag(name, value, **input_options,
+    <%= text_field_tag(name, value,
+      **input_options,
       type: "range",
-      "x-model.debounce.300": "value"
+      "x-model.throttle.300ms": "value"
     ) %>
   </div>
   <div class="flex-none px-2 opacity-60">
