--- a/public/lookbook-assets/css/lookbook.css
+++ b/public/lookbook-assets/css/lookbook.css
@@ -1824,25 +1824,25 @@ pre[class*="language-"] {
   color: var(--lookbook-viewport-handle-icon-stroke-hover);
 }
 
-.form-input:not([type="range"]) {
+[type="text"], [type="email"], [type="url"], [type="password"], [type="number"], [type="date"], [type="datetime-local"], [type="month"], [type="search"], [type="tel"], [type="time"], [type="week"], textarea, select {
   color: var(--lookbook-input-text);
 }
 
-.form-input:not([type="range"])::placeholder {
+[type="text"]::placeholder, [type="email"]::placeholder, [type="url"]::placeholder, [type="password"]::placeholder, [type="number"]::placeholder, [type="date"]::placeholder, [type="datetime-local"]::placeholder, [type="month"]::placeholder, [type="search"]::placeholder, [type="tel"]::placeholder, [type="time"]::placeholder, [type="week"]::placeholder, textarea::placeholder, select::placeholder {
   color: var(--lookbook-input-text-placeholder);
   font-style: italic;
 }
 
-.form-input:not([type="range"]) {
+[type="text"], [type="email"], [type="url"], [type="password"], [type="number"], [type="date"], [type="datetime-local"], [type="month"], [type="search"], [type="tel"], [type="time"], [type="week"], textarea, select {
   border-color: var(--lookbook-input-border);
 }
 
-.form-input:not([type="range"]):focus {
+[type="text"]:focus, [type="email"]:focus, [type="url"]:focus, [type="password"]:focus, [type="number"]:focus, [type="date"]:focus, [type="datetime-local"]:focus, [type="month"]:focus, [type="search"]:focus, [type="tel"]:focus, [type="time"]:focus, [type="week"]:focus, textarea:focus, select:focus {
   border-color: var(--lookbook-input-border-focus);
   --tw-ring-color: var(--lookbook-input-border-focus);
 }
 
-.form-input:not([type="range"]) {
+[type="text"], [type="email"], [type="url"], [type="password"], [type="number"], [type="date"], [type="datetime-local"], [type="month"], [type="search"], [type="tel"], [type="time"], [type="week"], textarea, select {
   width: 100%;
   background-color: var(--lookbook-input-bg);
   border-radius: .375rem;
@@ -2181,20 +2181,20 @@ input[type="color"]::-webkit-color-swatch {
   height: calc(100vh - 40px);
 }
 
-.h-3\.5 {
-  height: .875rem;
-}
-
-.h-3 {
-  height: .75rem;
-}
-
 .h-6 {
   height: 1.5rem;
 }
 
 .h-5 {
   height: 1.25rem;
+}
+
+.h-3\.5 {
+  height: .875rem;
+}
+
+.h-3 {
+  height: .75rem;
 }
 
 .h-\[9px\] {
@@ -2229,20 +2229,20 @@ input[type="color"]::-webkit-color-swatch {
   width: 100vw;
 }
 
-.w-3\.5 {
-  width: .875rem;
-}
-
-.w-3 {
-  width: .75rem;
-}
-
 .w-11 {
   width: 2.75rem;
 }
 
 .w-5 {
   width: 1.25rem;
+}
+
+.w-3\.5 {
+  width: .875rem;
+}
+
+.w-3 {
+  width: .75rem;
 }
 
 .w-\[9px\] {
@@ -2303,13 +2303,13 @@ input[type="color"]::-webkit-color-swatch {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
+.translate-x-5 {
+  --tw-translate-x: 1.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-x-5 {
-  --tw-translate-x: 1.25rem;
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -2347,12 +2347,12 @@ input[type="color"]::-webkit-color-swatch {
   cursor: default !important;
 }
 
-.cursor-\[not-allowed\] {
-  cursor: not-allowed;
-}
-
 .cursor-pointer {
   cursor: pointer;
+}
+
+.cursor-\[not-allowed\] {
+  cursor: not-allowed;
 }
 
 .cursor-\[col-resize\] {
@@ -2516,16 +2516,16 @@ input[type="color"]::-webkit-color-swatch {
   white-space: pre-wrap;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-sm {
   border-radius: .125rem;
 }
 
 .rounded-md {
   border-radius: .375rem;
-}
-
-.rounded-full {
-  border-radius: 9999px;
 }
 
 .rounded-bl-md {
@@ -2594,6 +2594,10 @@ input[type="color"]::-webkit-color-swatch {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
+.border-transparent {
+  border-color: #0000;
+}
+
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
@@ -2601,10 +2605,6 @@ input[type="color"]::-webkit-color-swatch {
 
 .\!border-lookbook-header-border {
   border-color: var(--lookbook-header-border) !important;
-}
-
-.border-transparent {
-  border-color: #0000;
 }
 
 .border-lookbook-tabs-border-active {
@@ -2647,6 +2647,14 @@ input[type="color"]::-webkit-color-swatch {
   background-color: var(--lookbook-drawer-bg);
 }
 
+.bg-lookbook-input-toggle-active {
+  background-color: var(--lookbook-input-toggle-active);
+}
+
+.bg-lookbook-input-toggle {
+  background-color: var(--lookbook-input-toggle);
+}
+
 .bg-lookbook-prose-bg {
   background-color: var(--lookbook-prose-bg);
 }
@@ -2658,14 +2666,6 @@ input[type="color"]::-webkit-color-swatch {
 
 .\!bg-lookbook-header-bg {
   background-color: var(--lookbook-header-bg) !important;
-}
-
-.bg-lookbook-input-toggle-active {
-  background-color: var(--lookbook-input-toggle-active);
-}
-
-.bg-lookbook-input-toggle {
-  background-color: var(--lookbook-input-toggle);
 }
 
 .bg-lookbook-divider {
@@ -2740,6 +2740,11 @@ input[type="color"]::-webkit-color-swatch {
   padding-bottom: .5rem;
 }
 
+.px-2 {
+  padding-left: .5rem;
+  padding-right: .5rem;
+}
+
 .px-3 {
   padding-left: .75rem;
   padding-right: .75rem;
@@ -2748,11 +2753,6 @@ input[type="color"]::-webkit-color-swatch {
 .py-3 {
   padding-top: .75rem;
   padding-bottom: .75rem;
-}
-
-.px-2 {
-  padding-left: .5rem;
-  padding-right: .5rem;
 }
 
 .py-1 {
@@ -2810,16 +2810,16 @@ input[type="color"]::-webkit-color-swatch {
   padding-bottom: 3rem;
 }
 
+.pt-2 {
+  padding-top: .5rem;
+}
+
 .pt-\[4px\] {
   padding-top: 4px;
 }
 
 .pb-0 {
   padding-bottom: 0;
-}
-
-.pt-2 {
-  padding-top: .5rem;
 }
 
 .pr-1 {
@@ -3360,15 +3360,15 @@ input[type="color"]::-webkit-color-swatch {
   outline: 2px solid #0000;
 }
 
-.focus\:ring-0:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
 .focus\:ring-2:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-0:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
