feat(params): add styling support to custom inputs

--- a/app/components/lookbook/params/editor/component.html.erb
+++ b/app/components/lookbook/params/editor/component.html.erb
@@ -14,3 +14,8 @@
     </table>
   </div>
 <% end %>
+
+<% if param_styles %>
+  <% content_for :user_styles do %><%= param_styles %>
+  <% end %>
+<% end %>
