refactor(panels): use template parser for style extraction

--- a/app/components/lookbook/inspector_panel/component.html.erb
+++ b/app/components/lookbook/inspector_panel/component.html.erb
@@ -3,5 +3,6 @@
 <% end %>
 
 <% if panel_styles %>
-  <% content_for :user_styles do %><%= panel_styles %><% end %>
+  <% content_for :user_styles do %><%= panel_styles %>
+  <% end %>
 <% end %>
