refactor(config): big config store rework

--- a/app/components/lookbook/inspector_panel/component.html.erb
+++ b/app/components/lookbook/inspector_panel/component.html.erb
@@ -1,4 +1,4 @@
-<%= render_component_tag :div, class: "h-full" do %>
+<%= render_component_tag :div, id: id, class: "h-full", "data-panel": @name do %>
   <%= panel_html %>
 <% end %>
 
