fix(previews): remove all:unset css declaration from grouped examples wrapper

--- a/app/views/lookbook/preview.html.erb
+++ b/app/views/lookbook/preview.html.erb
@@ -1,7 +1,7 @@
 <% if examples.many? %>
   <%# Render a group of examples %>
   <% examples.each do |example| %>
-    <div style="all: unset; margin-bottom: 30px; display: block;">
+    <div style="margin-bottom: 30px !important; display: block !important;">
       <h6 style="all: unset; display: block; color: #999; font-family: sans-serif; font-size: 14px; margin-top: 0; margin-bottom: 10px;">
         <%= example.label %>
       </h6>
