refactor(formatters): split out code highlighting and beautification into services

--- a/app/components/lookbook/code/component.html.erb
+++ b/app/components/lookbook/code/component.html.erb
@@ -6,5 +6,5 @@
       "h-full": full_height?
     } 
   ] do %>
-  <%= Lookbook::CodeFormatter.highlight(source, **@highlight_opts) %>
+  <%= Lookbook::CodeHighlighter.call(source, **@highlight_opts) %>
 <% end %>
